--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -18,9 +18,17 @@ body {
 	padding: 10px;
 	position: absolute;
 	width: 300px;
+	height: 100%;
+	border-right: solid 1px #ddd;
+}
+
+
+/* ----- Style untuk tabel --- */
+#table_vertex td, #table_vertex th {
+	font-size: 0.9em;
 }
 /* ----- Style untuk overlay --- */
-#site_overlay_process {
+#site_overlay_process, #site_overlay_modal {
 	display: none;
 	position: fixed; top: 0px; left: 0px; width: 100%; height: 100%;
 	z-index: 1020;
@@ -35,3 +43,11 @@ body {
 	text-align: center;
 }
 #site_ov_msg_process {text-align: center; margin-bottom: 20px;}
+
+#site_ov_box_modal {
+	margin: 200px auto;
+	min-height: 100px;
+	background: #fff;
+	padding: 10px;
+	text-align: center;
+}
