--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -22,9 +22,9 @@ body {
 	border-right: solid 1px #ddd;
 }
 
-
+.site_actionpanel {display:none;}
 /* ----- Style untuk tabel --- */
-#table_vertex td, #table_vertex th {
+#table_edge td, #table_edge th {
 	font-size: 0.9em;
 }
 /* ----- Style untuk overlay --- */
@@ -33,6 +33,7 @@ body {
 	position: fixed; top: 0px; left: 0px; width: 100%; height: 100%;
 	z-index: 1020;
 	background: rgba(0,0,0,0.5);
+	overflow-y: auto;
 }
 #site_ov_box_process {
 	margin: 200px auto;
@@ -44,10 +45,12 @@ body {
 }
 #site_ov_msg_process {text-align: center; margin-bottom: 20px;}
 
+#site_modal_loader {
+	text-align: center;
+}
 #site_ov_box_modal {
-	margin: 200px auto;
+	margin: 50px auto 10px;
 	min-height: 100px;
 	background: #fff;
 	padding: 10px;
-	text-align: center;
 }
