--- a/rest/templates/editor.phtml
+++ b/rest/templates/editor.phtml
@@ -138,11 +138,11 @@
 		</div>
 		<div id="site_panel_placenode" class="site_actionpanel">
 			<p>Klik pada map untuk menaruh di mana node akan ditempatkan.</p>
-			<button onclick="return reset_gui();" class="btn btn-danger btn-block">Batal</button>
+			<button onclick="return cancel_picker();" class="btn btn-danger btn-block">Batal</button>
 		</div>
 		<div id="site_panel_selectnode" class="site_actionpanel">
 			<p>Pilih salah satu node dengan klik..</p>
-			<button onclick="return reset_gui();" class="btn btn-danger btn-block">Batal</button>
+			<button onclick="return cancel_picker();" class="btn btn-danger btn-block">Batal</button>
 		</div>
 		<div id="site_panel_movenode" class="site_actionpanel">
 			<p>Drag marker node ke titik yang diinginkan, lalu klik Save.</p>
@@ -197,7 +197,7 @@
 				
 				<button type="submit" class="btn btn-primary btn-block">
 					<i class="fa fa-floppy-o"></i> Save</button>
-				<button onclick="return reset_gui();" class="btn btn-danger btn-block" >
+				<button onclick="return routeeditor_draw_cancel();" class="btn btn-danger btn-block" >
 					<i class="fa fa-times"></i> Batal</button>
 				<input type="hidden" name="verb" value="route.save" />
 			</form>
@@ -253,6 +253,10 @@
 		</div>
 		<div id="fpanel_drawroute" class="fpanel_item" style="width: 300px;">
 			<h5>Route</h5>
+			<a href="#" class="btn btn-danger btn-sm btn-block" onclick="return routeeditor_draw_delete();">
+				<i class="fa fa-trash"></i> Delete Route</a>
+			<a href="#" class="btn btn-default btn-sm btn-block" onclick="return routeeditor_draw_reset();">
+				<i class="fa fa-times"></i> Clear and Reset Route</a>
 			<div class="table-responsive" style="overflow-y: scroll; height: 400px; padding: 5px; border:solid 1px #F5F5F5;"
 					id="container_tablerouteedge">
 				<table class="table table-striped table-condensed table-hover table-bordered"
@@ -293,11 +297,11 @@
 			<hr />
 			<a href="#" class="btn btn-default btn-sm btn-block" onclick="return edge_interpolate();">
 				<i class="fa fa-cogs"></i> Interpolate</a>
-			<a href="#" class="btn btn-default btn-sm btn-block" onclick="return edge_reverse_current();">
-				<i class="fa fa-exchange"></i> Reverse</a>
+			<a href="#" class="btn btn-default btn-sm btn-block" onclick="return edge_reverse_current();"
+				id="fpanel_edge_btnreverse"><i class="fa fa-exchange"></i> Reverse</a>
 			<hr />
-			<a href="#" class="btn btn-danger btn-sm btn-block" onclick="return edge_delete();">
-				<i class="fa fa-trash"></i> Delete</a>
+			<a href="#" class="btn btn-danger btn-sm btn-block" onclick="return edge_delete();"
+				id="fpanel_edge_btndelete"><i class="fa fa-trash"></i> Delete</a>
 		</div>
 		<div id="fpanel_nodeedit" class="fpanel_item" style="width: 150px;">
 			<b>Node options:</b><hr />
