Route mode preference added
o Tambah pilihan moda transportasi umum (angkot/BRT)

--- a/rest/templates/index.phtml
+++ b/rest/templates/index.phtml
@@ -72,7 +72,20 @@
 								</div>
 								
 							</fieldset>
-							
+							<fieldset>
+								<legend style="font-size: 16px;margin-bottom:10px;">Preferensi</legend>
+								<div class="form-group">
+	<div class="checkbox">
+		<label><input type="checkbox" checked="checked" name="angkot" value="1" id="chk_angkot" />
+			Angkutan Kota (Angkot)</label>
+	</div>
+	<div class="checkbox">
+		<label><input type="checkbox" checked="checked" name="brt" value="1" id="chk_brt" />
+			Bus Rapid Transit (BRT)</label>
+	</div>
+								</div>
+								
+							</fieldset>
 							<button type="submit" class="btn btn-primary btn-block" disabled id="btn_beginsearch">
 								<i class="fa fa-search"></i> Search Route</button>
 						</form>
