--- a/rest/public/assets/css/global.css
+++ b/rest/public/assets/css/global.css
@@ -2,11 +2,14 @@ body {
 	margin: 0 0;
 	padding: 0 0;
 }
+
+.blocking_elmt {
+	min-width: 800px;
+}
 #site_mainwrapper  {
 	position: absolute;
 	width: 100%;
 	height: 100%;
-	min-width: 800px;
 }
 
 #site_googlemaps {
@@ -18,24 +21,43 @@ body {
 	padding: 10px;
 	position: absolute;
 	width: 300px;
-	height: 100%;
 	border-right: solid 1px #ddd;
 }
 
 .site_actionpanel {display:none;}
+
+#site_actionpanel_container {
+	min-height: 300px;
+	overflow-x: hidden;
+	overflow-y: auto;
+}
+/* ----- Style untuk navbar --- */
+#site_navbar {
+	background-color:#000;
+	color:#eee;
+	height:32px;
+	padding:5px 10px;
+	position:absolute;
+	top:0px;
+	width:100%;
+	z-index:100;
+}
+
+#site_navbar a {color: #ddd;text-decoration:none;}
+#site_navbar a:hover {color: #fff;text-decoration:none;}
 /* ----- Style untuk tabel --- */
 #table_edge td, #table_edge th {
 	font-size: 0.9em;
 }
 /* ----- Style untuk overlay --- */
-#site_overlay_process, #site_overlay_modal {
+#site_overlay_process, #site_overlay_modal, #site_overlay_message {
 	display: none;
 	position: fixed; top: 0px; left: 0px; width: 100%; height: 100%;
 	z-index: 1020;
 	background: rgba(0,0,0,0.5);
 	overflow-y: auto;
 }
-#site_ov_box_process {
+#site_ov_box_process, #site_ov_box_message {
 	margin: 200px auto;
 	width: 300px;
 	min-height: 100px;
@@ -54,3 +76,5 @@ body {
 	background: #fff;
 	padding: 10px;
 }
+
+
